fixed overlap

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -22,6 +22,10 @@
    background-image: url('http://www.consultorio20.com.br/wp-content/uploads/2016/02/Geometric-Background.jpg.pagespeed.ce._pT6EVah5D.jpg');
  }
 
+.container{
+  padding-top: 8%;
+}
+
  li{
     list-style-type: none;
   }
